<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.efrain.intercamprueba.ui.login.LoginFragment"
        android:label=""
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.efrain.intercamprueba.ui.main.MainFragment"
        android:label="@string/toolbar_beers"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_mainFragment_to_favoritesFragment"
            app:destination="@id/favoritesFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.efrain.intercamprueba.ui.detail.DetailFragment"
        android:label="@string/toolbar_detail"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.efrain.intercamprueba.ui.favorites.FavoritesFragment"
        android:label="@string/toolbar_fav"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_favoritesFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
</navigation>